# qmc5883l

./: .gitignore  README.md
examples/: CMakeLists.txt  test.c
examples/azimuth/: CMakeLists.txt  azimuth.c
examples/calibrate/: CMakeLists.txt
examples/calibrated/: CMakeLists.txt  calibrated.c
examples/xyz/: CMakeLists.txt  xyz.c
src/: CMakeLists.txt  qmc5883l.c  qmc5883l.h
